# api-fastapi-redis

./: Dockerfile.dockerfile  README.md  api-redis-lab.postman_collection.json  docker-compose.yaml  estrutura-de-dados.txt  modelagem.txt  pyproject.toml  workspace.postman_globals.json
app/: generate_data.py  main.py  redis_client.py
